Numerous UI tweaks.
- Don't use custom button content, because it doesn't abide typical button
  gtk button + image preferences. This forces us to set the button image in
  the code since glade can't handle it.

- Use widget mnemonics _everywhere_

- Tweak some default widget focus, and other misc things.

--- a/src/vmm-choose-cd.glade
+++ b/src/vmm-choose-cd.glade
@@ -7,7 +7,7 @@
     <property name="can_focus">True</property>
     <property name="has_focus">True</property>
     <property name="border_width">6</property>
-    <property name="title" translatable="yes">Choose A CD Source Device</property>
+    <property name="title" translatable="yes">Choose CD Media</property>
     <property name="resizable">False</property>
     <property name="window_position">center-on-parent</property>
     <property name="type_hint">dialog</property>
@@ -76,7 +76,7 @@
                     </child>
                     <child>
                       <widget class="GtkRadioButton" id="physical-media">
-                        <property name="label" translatable="yes">_CD-ROM or DVD</property>
+                        <property name="label" translatable="yes">CD-_ROM or DVD</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
