--- a/src/vmm-create-vol.glade
+++ b/src/vmm-create-vol.glade
@@ -148,7 +148,9 @@
                               <widget class="GtkLabel" id="label5">
                                 <property name="visible">True</property>
                                 <property name="xalign">1</property>
-                                <property name="label" translatable="yes">Format:</property>
+                                <property name="label" translatable="yes">_Format:</property>
+                                <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">vol-format</property>
                               </widget>
                               <packing>
                                 <property name="top_attach">1</property>
@@ -161,7 +163,9 @@
                               <widget class="GtkLabel" id="label4">
                                 <property name="visible">True</property>
                                 <property name="xalign">1</property>
-                                <property name="label" translatable="yes">Name:</property>
+                                <property name="label" translatable="yes">_Name:</property>
+                                <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">vol-name</property>
                               </widget>
                               <packing>
                                 <property name="x_options">GTK_FILL</property>
@@ -319,7 +323,9 @@
                                   <widget class="GtkLabel" id="label7">
                                     <property name="visible">True</property>
                                     <property name="xalign">1</property>
-                                    <property name="label" translatable="yes">Allocation:</property>
+                                    <property name="label" translatable="yes">_Allocation:</property>
+                                    <property name="use_underline">True</property>
+                                    <property name="mnemonic_widget">vol-allocation</property>
                                   </widget>
                                   <packing>
                                     <property name="top_attach">1</property>
@@ -332,7 +338,9 @@
                                   <widget class="GtkLabel" id="label6">
                                     <property name="visible">True</property>
                                     <property name="xalign">1</property>
-                                    <property name="label" translatable="yes">Max Capacity:</property>
+                                    <property name="label" translatable="yes">Max Ca_pacity:</property>
+                                    <property name="use_underline">True</property>
+                                    <property name="mnemonic_widget">vol-capacity</property>
                                   </widget>
                                   <packing>
                                     <property name="x_options">GTK_FILL</property>
@@ -415,7 +423,7 @@
         <child>
           <widget class="GtkHButtonBox" id="hbuttonbox1">
             <property name="visible">True</property>
-            <property name="spacing">6</property>
+            <property name="spacing">12</property>
             <property name="layout_style">end</property>
             <child>
               <widget class="GtkButton" id="pool-help">
@@ -449,46 +457,12 @@
             </child>
             <child>
               <widget class="GtkButton" id="vol-create">
+                <property name="label" translatable="yes">_Finish</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_underline">True</property>
                 <signal name="clicked" handler="on_vol_create_clicked"/>
-                <child>
-                  <widget class="GtkAlignment" id="alignment1">
-                    <property name="visible">True</property>
-                    <property name="xscale">0</property>
-                    <property name="yscale">0</property>
-                    <child>
-                      <widget class="GtkHBox" id="hbox7">
-                        <property name="visible">True</property>
-                        <property name="spacing">2</property>
-                        <child>
-                          <widget class="GtkImage" id="image3">
-                            <property name="visible">True</property>
-                            <property name="stock">gtk-quit</property>
-                          </widget>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">0</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <widget class="GtkLabel" id="label14">
-                            <property name="visible">True</property>
-                            <property name="label" translatable="yes">_Finish</property>
-                            <property name="use_underline">True</property>
-                          </widget>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">1</property>
-                          </packing>
-                        </child>
-                      </widget>
-                    </child>
-                  </widget>
-                </child>
               </widget>
               <packing>
                 <property name="expand">False</property>
